Modify 2 NotFound tests and fix the errors